adicionando arquivos de estrutura CRH e apresentacao

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -52,6 +52,7 @@
                                 </a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="#">Secretarias Estaduais</a>
+                                    <a class="dropdown-item" href="#">Estrutura da CRH</a>
                                     <a class="dropdown-item" href="#">Núcleo de Pesquisa</a>
                                 </div>
                             </li>
@@ -61,8 +62,8 @@
                                     A CRH
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="apresentacao.html">Apresentação</a>
-                                    <a class="dropdown-item" href="estruturaCrh.html">Estrutura da CRH</a>
+                                    <a class="dropdown-item" href="#">Apresentação</a>
+                                    <a class="dropdown-item" href="#">Estrutura da CRH</a>
                                     <a class="dropdown-item" href="#">Núcleo de Pesquisa</a>
                                     <a class="dropdown-item" href="#">Galeria</a>
                                 </div>
@@ -97,144 +98,39 @@
     <div class="container-fluid bg-white conteudo">
 
 
-        <section class="container py-3">
-            <h2 class="p-2">Downloads</h2>
+        <section class="container py-3 text-justify">
+            <h2 class="py-3">Apresentação</h2>
             <!-- <h3>Notícias</h3> -->
+            <p>
+                A primeira estrutura de Recursos Humanos na Secretaria de Estado da Saúde – Núcleo de RH, foi criada em
+                1974, passando
+                posteriormente, a Subcoordenadoria e depois à Coordenadoria, a qual foi criada, oficialmente, no ano de
+                1995. Esta é
+                composta por 4 (quatro) subcoordenadorias: administração da folha de pagamento, capacitação, gestão das
+                relações do
+                trabalho e informação e investigação. Esta Coordenadoria é subordinada diretamente ao Secretário de
+                Estado da Saúde
+                Pública.
+            </p>
+            <p>
+                Para a área de educação profissional de nível médio, a SESAP conta com o Centro de Formação de Pessoal
+                de Pessoal para
+                os Serviços da Saúde “Dr. Manoel da Costa Souza” – CEFOPE, o qual dispõe de auditório, laboratório de
+                informática,
+                biblioteca, laboratório de práticas e salas de aula, e utiliza outras estruturas através de locação e
+                parcerias.
+            </p>
+            <p>
+                Além das estruturas acima citadas existem os Núcleos de Recursos Humanos nas Unidades Regionais de Saúde
+                e na maioria
+                das Unidades de Saúde da Secretaria. Esses núcleos se articulam com a Coordenadoria de RH para resolução
+                de problemas e
+                encaminhamentos das atividades da área.
+            </p>
 
-            <div class="row">
+            <a class="btn btn-primary" href="estruturaCrh.html">Ver Estrutura CRH</a>
 
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/01.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 01</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/02.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 02</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/03.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 03</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/04.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 04</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/01.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 05</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/02.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 06</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/03.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 07</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 px-4 py-2">
-                    <div class="row bg-light">
-                        <div class="col-md-4 col-sm-5 py-3">
-                            <img src="assets/img/noticia/04.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-8 col-sm-7 py-3">
-                            <h5>Notícia 08</h5>
-                            <p>Informamos a todas as unidades de Produção/Produtividade Julho/2020, que a folha já
-                                foi
-                                encerrada...
-                                <a href="#" class="">Ver mais</a></p>
-
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
-            </div>
-
-
-
-    </div>
-
-    </section>
+        </section>
     </div>
     <footer class="container-fluid azulSesap text-light sombra">
         <div class="row">
@@ -262,7 +158,7 @@
     </div>
 
 
-
+    <!-- https://codepen.io/AldoFerrari/pen/raayXJ -->
 
 
 
