--- a/estruturaCrh.html
+++ b/estruturaCrh.html
@@ -52,7 +52,6 @@
                                 </a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="#">Secretarias Estaduais</a>
-                                    <a class="dropdown-item" href="#">Estrutura da CRH</a>
                                     <a class="dropdown-item" href="#">Núcleo de Pesquisa</a>
                                 </div>
                             </li>
@@ -62,8 +61,8 @@
                                     A CRH
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Apresentação</a>
-                                    <a class="dropdown-item" href="#">Estrutura da CRH</a>
+                                    <a class="dropdown-item" href="apresentacao.html">Apresentação</a>
+                                    <a class="dropdown-item" href="estruturaCrh.html">Estrutura da CRH</a>
                                     <a class="dropdown-item" href="#">Núcleo de Pesquisa</a>
                                     <a class="dropdown-item" href="#">Galeria</a>
                                 </div>
@@ -99,9 +98,9 @@
 
 
         <section class="container py-3">
-            <h2 class="p-2">Estrutura da CRH</h2>
+            <h2 class="py-3">Estrutura da CRH</h2>
             <!-- <h3>Notícias</h3> -->
-            <div class="tree scroll">
+            <div class="row tree scroll">
                 <ul class="">
                     <li>
                         <a href="#">Parent</a>
@@ -142,6 +141,113 @@
 
 
         </section>
+        <section class="container">
+            <div class="row text-justify">
+                <h3 class="py-3">Atribuições e Competências</h3>
+
+                <p>
+                    Compete à Coordenadoria de Recursos Humanos coordenar o processo de definição e implementação das
+                    políticas na área de
+                    gestão do trabalho e da educação na saúde em consonância com a política estadual de saúde.
+                </p>
+                <p>
+                    À Subcoordenadoria de Gestão das Relações de Trabalho tem como responsabilidade acompanhar,
+                    elaborar,
+                    planejar e
+                    negociar a política de gestão de pessoas nas unidades administrativas e de saúde da Secretaria de
+                    Estado. Suas
+                    atribuições: realizar diagnósticos da situação dos trabalhadores de saúde da Secretaria de Estado;
+                    apontar as
+                    necessidades quantitativas e qualitativas de trabalhadores de saúde para suprir as necessidades das
+                    diversas unidades
+                    administrativas ou de saúde da Secretaria de Estado; desenvolver estratégias que garantam a oferta
+                    de
+                    trabalhadores de
+                    saúde da Secretaria de Estado; desenvolver ações orientadas para determinar o quadro necessário de
+                    trabalhadores de
+                    saúde das diversas unidades administrativas ou de saúde da Secretaria de Estado; desenvolver ações
+                    para
+                    a viabilização
+                    do PCCR SAÚDE para os trabalhadores de saúde do Governo do Estado do RN; colaborar com os demais
+                    gestores do SUS para a
+                    solução dos problemas de pessoal nas diversas unidades administrativas ou de saúde no Estado do RN.
+                </p>
+                <p>
+                    À Subcoordenadoria de Administração da Folha de Pagamento, compete administrar a folha de pagamento
+                    e
+                    remuneração dos
+                    servidores. Suas atribuições: organizar e encaminhar para a Secretaria da Administração as
+                    informações
+                    sobre a
+                    remuneração mensal dos servidores; analisar, calcular e controlar os processos burocráticos
+                    relativos a
+                    descontos e
+                    pagamentos de vantagens pessoais; calcular dívidas de exercícios atuais e anteriores; atualizar
+                    cadastros, PIS / PASEP,
+                    nº de conta corrente, nome de dependentes, declaração e averbação funcional; informar mensalmente à
+                    Previdência Social o
+                    GEFIP / SEFIP dos servidores; coordenar o serviço interno de atendimento ao servidor.
+                </p>
+                <p>À Subcoordenadoria de Investigação e Informação de RH, compete subsidiar a ação dos gestores e
+                    gerentes
+                    frente às
+                    tomadas de decisões na área de gestão de RH, através da elaboração e definição de normas, rotinas e
+                    fluxos dos sistemas
+                    de coleta, codificação, processamento, cadastramento, análise e disseminação de dados, de forma a
+                    assegurar a qualidade,
+                    a uniformidade e a fidedignidade das informações da gestão em saúde. Suas atribuições:
+                    instrumentalizar
+                    o processo
+                    decisório na gestão de RH; prestar informações gerais no âmbito da Secretaria e de outros órgãos que
+                    sejam relevantes
+                    para área de RH; organizar e disseminar informações, transformando-a em conhecimento; contribuir
+                    para o
+                    progressivo
+                    desenvolvimento e aprimoramento dos sistemas de informação, e, conseqüentemente, para a consistência
+                    das
+                    análises
+                    realizadas; identificar situações que exijam investigação mais específica através de levantamento e
+                    análise de dados;
+                    implementar a descentralização das informações nas unidades de saúde e administrativas da rede
+                    estadual;
+                    incrementar a
+                    utilização da internet como ferramenta de aquisição, transação e disseminação de informações
+                    relacionadas à gestão de
+                    RH.
+                </p>
+                <p>À Subcoordenadoria de Capacitação (SUCA) tem sob sua responsabilidade favorecer a implementação de
+                    ações
+                    vinculadas à
+                    Política de Educação na Saúde no âmbito do SUS/RN. Para tanto, necessário se faz uma firme
+                    articulação
+                    entre os
+                    diferentes níveis de gestão, com o objetivo de facilitar os processos educativos nos três níveis de
+                    governo. Além disso,
+                    a SUCA se responsabiliza pelas ações educativas direcionadas aos trabalhadores que atuam na
+                    Secretaria
+                    de Estado, em
+                    seus diferentes setores: unidades administrativas de nível central e regional, unidades hospitalares
+                    e
+                    unidades de
+                    referência especializada.
+                </p>
+                <p>Assim, a SUCA tem as seguintes competências: coordenar a utilização dos espaços institucionais da
+                    SESAP
+                    como campos de
+                    estágio para estudantes; acompanhar o processo de formação de médicos residentes nas áreas e espaços
+                    institucionais da
+                    SESAP/RN; coordenar a implementação da Política Nacional de Educação Permanente em Saúde no âmbito
+                    do
+                    SUS/RN;
+                    proporcionar aos servidores que atuam em unidades administrativas e de saúde, sob gestão estadual,
+                    acesso a processos
+                    educativos; coordenar as ações de ciência, tecnologia e inovação desenvolvidas no âmbito do SUS/RN;
+                    apoiar a
+                    implementação da Política Nacional de Humanização no SUS/RN, especialmente no que diz respeito à
+                    formação específica na
+                    área.</p>
+            </div>
+        </section>
     </div>
     <footer class="container-fluid azulSesap text-light sombra">
         <div class="row">
@@ -149,6 +255,7 @@
                 <img src="./assets/img/iconesEstado.png" width="50px">
             </div>
             <div class="row col-lg-10 py-3">
+
 
                 <div class="col-lg-6 pt-3">
                     <p>Coordenadoria de Recursos Humanos - Sesap/RN</p>
