--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     A CRH
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Apresentação</a>
+                                    <a class="dropdown-item" href="./apresentacao.html">Apresentação</a>
                                     <a class="dropdown-item" href="./estruturaCrh.html">Estrutura da CRH</a>
                                     <a class="dropdown-item" href="#">Núcleo de Pesquisa</a>
                                     <a class="dropdown-item" href="#">Galeria</a>
