tooltip da estrutura adicionado

--- a/estruturaCrh.html
+++ b/estruturaCrh.html
@@ -108,7 +108,9 @@
                                 data-placement='top' href="#crh">CRH</a>
                             <ul>
                                 <li>
-                                    <a href="#sugrt">SUGRT</a>
+                                    <a class="btn" data-toggle="tooltip"
+                                        title="Subcoordenadoria de Gestão das Relações de Trabalho" data-placement='top'
+                                        href="#sugrt">SUGRT</a>
                                     <ul>
                                         <li>
                                             <a href="#sugrt">GAMC</a>
@@ -122,7 +124,9 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#suafp">SUAFP</a>
+                                    <a class="btn" data-toggle="tooltip"
+                                        title="Subcoordenadoria de Administração da Folha de Pagamento"
+                                        data-placement='top' href="#suafp">SUAFP</a>
                                     <ul>
                                         <li>
                                             <a href="#suafp">GAP</a>
@@ -130,7 +134,8 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#suca">SUCA</a>
+                                    <a class="btn" data-toggle="tooltip" title="Subcoordenadoria de Capacitação"
+                                        data-placement='top' href="#suca">SUCA</a>
                                     <ul>
                                         <li>
                                             <a href="#suca">GAAES</a>
@@ -141,7 +146,9 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#suiirh">SUIIRH</a>
+                                    <a class="btn" data-toggle="tooltip"
+                                        title="Subcoordenadoria de Investigação e Informação de RH" data-placement='top'
+                                        href="#suiirh">SUIIRH</a>
                                     <ul>
                                         <li>
                                             <a href="#suiirh">GAIIRH</a>
@@ -385,21 +392,20 @@
     </div>
 
 
-    <!-- https://codepen.io/AldoFerrari/pen/raayXJ -->
-
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+
 
 </body>
 
